The unzip mechanism of the self-upgrade did not preserve execution permission on files, which now, that we copy all files, leads to a non-startable program file. Work for #73.